--- a/djangoblog/blog/templates/blog/base.html
+++ b/djangoblog/blog/templates/blog/base.html
@@ -35,6 +35,7 @@
           <!-- Navbar Right Side -->
           <div class="navbar-nav">
             {% if user.is_authenticated %}
+            <a class="nav-item nav-link" href="{% url 'post-create' %}">New Post</a>
             <a class="nav-item nav-link" href="{% url 'profile' %}">Profile</a>
             <a class="nav-item nav-link" href="{% url 'logout' %}">Logout</a>
             {% else %}
@@ -66,7 +67,9 @@
             <li class="list-group-item list-group-item-light">Latest Posts</li>
             <li class="list-group-item list-group-item-light">Announcements</li>
             <li class="list-group-item list-group-item-light">Calendars</li>
-            <li class="list-group-item list-group-item-light">etc</li>
+            {% if user.is_authenticated %}
+           <a class="list-group-item list-group-item-light" href="{% url 'post-create' %}">New Post</a>
+            {% endif %}
           </ul>
           </p>
         </div>
