login forgot password

--- a/djangoblog/user/templates/user/login.html
+++ b/djangoblog/user/templates/user/login.html
@@ -11,6 +11,9 @@
         <div class="form-group border-top pt-3">
             <button class="btn btn-outline-info" type="submit">Log in</button>
         </div>
+        <small class="text-muted">
+            <a class="ml-2" href="{% url 'password_reset' %}">Forgotten password?</a>
+        </small>
     </form>
     <div class="border-top pt-3">
         <small class="text-muted">
